css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}

.navigation {
    margin: 20px 0;
    display: flex;
    justify-content: flex-start;
    align-content: space-between;
    align-items: flex-end;
}

.navigation nav {
    display: flex;
    margin: 0 0 0 40px;
   
}

.navigation nav a{
    text-decoration: none;
    margin: 0 80px 0 0;
    color: black;
}

/*  About page header */

.header-img {
    margin-bottom: 20px;
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 20px 0 20px 0;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

/* Color Boxes and middle Content */

.middle-content .boxes .box1, .box2,
.box3, .box4, .box5, .box6, .box7, .box8, 
.box9, .box10 {
    width: 12.5%;
    height: 100px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.middle-content .boxes .box1 {
    background-color: teal;
}

.middle-content .boxes .box2 {
    background-color:gold;
}

.middle-content .boxes .box3 {
    background-color: cadetblue;
}

.middle-content .boxes .box4 {
    background-color:coral;
}

.middle-content .boxes .box5 {
    background-color: crimson;
}

.middle-content .boxes .box6 {
    background-color:forestgreen;
}

.middle-content .boxes .box7 {
    background-color: darkorchid;
}

.middle-content .boxes .box8 {
    background-color: hotpink;
}

.middle-content .boxes .box9 {
    background-color: indigo;
}

.middle-content .boxes .box10 {
    background-color: dodgerblue;
}

/* Bottom content and Footer content */

.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

/* About page main-content */

.main-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    border-top: 2px dotted black;
    margin: 20px 0;
}

.main-content img {
    margin: 10px 0;
}

.main-content div{
    width: 370px;
    border-bottom: 2px dotted black;
    padding: 10px 10px 10px 0;
}

.main-content button {
    border-radius: 5px;
    background: transparent;
    padding: 5px 20px;
    margin-top: 10px;
}

/* About page message content bottom of page */
.message {
    margin: 30px 10px;
}

footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

